--- a/data/countries/de/nw/borken/data.yaml
+++ b/data/countries/de/nw/borken/data.yaml
@@ -42,7 +42,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://gruene-borken.de/
+    url: https://gruene-borken.de/startseite/
 ---
 city: Gescher
 country: DE
@@ -69,7 +69,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://gruene-isselburg.de/
+    url: https://gruene-isselburg.de/startseite/
 ---
 city: Reken
 country: DE
@@ -79,7 +79,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-reken.de
+    url: https://gruene-reken.de/
 ---
 city: Rhede
 country: DE
@@ -108,7 +108,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-stadtlohn.de/
+    url: http://gruene-stadtlohn.de/
 ---
 city: Südlohn
 country: DE
