--- a/data/countries/de/nw/hochsauerlandkreis/data.yaml
+++ b/data/countries/de/nw/hochsauerlandkreis/data.yaml
@@ -8,7 +8,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-hsk.de/
+    url: http://gruene-hochsauerland.de
   - type: FACEBOOK
     url: https://www.facebook.com/gruene.hsk
   - type: TWITTER
