--- a/data/countries/de/nw/muenster/data.yaml
+++ b/data/countries/de/nw/muenster/data.yaml
@@ -8,7 +8,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.xn--grne-mnster-uhbe.de/
+    url: https://www.xn--grne-mnster-uhbe.de/
   - type: FACEBOOK
     url: https://www.facebook.com/gruene.muenster/
   - type: TWITTER
